fixed label alignment and reassigned knob-size value

--- a/scss/_patterns_switch.scss
+++ b/scss/_patterns_switch.scss
@@ -1,8 +1,9 @@
 @import 'settings';
-$knob-size: $sp-unit * 3;
+$knob-size: $sp-unit;
 
 @mixin vf-p-switch {
   .p-switch {
+    align-items: center;
     display: flex;
   }
 
@@ -35,13 +36,13 @@ $knob-size: $sp-unit * 3;
 
   .p-switch__slider {
     background: $color-mid-light;
-    border-radius: $knob-size * 0.5;
+    border-radius: $knob-size * 1.5;
     box-shadow: inset 0 2px 5px 0 transparentize($color-dark, 0.8);
     display: inline-block;
-    height: $knob-size - 0.5;
+    height: $knob-size * 2;
     margin: 0;
     position: relative;
-    width: $knob-size + 0.5;
+    width: $knob-size * 4;
 
     &::before {
       @extend %vf-has-round-corners;
@@ -49,12 +50,12 @@ $knob-size: $sp-unit * 3;
       @include vf-animation($duration: slow);
 
       background: $color-x-light;
-      border: 1px solid #757575;
+      border: 1px solid $color-mid-dark;
       border-radius: 50%;
       content: '';
-      height: $knob-size - 0.5;
+      height: $knob-size * 2;
       position: absolute;
-      width: $knob-size - 0.5;
+      width: $knob-size * 2;
     }
   }
 
